<resources>
    <string name="app_name">Supp4You</string>
    <string name="password">Password</string>
    <string name="guga_santospadilha_rede_ulbra_br">guga.santospadilha@rede.ulbra.br</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="create_your_space">create your space</string>
    <string name="supp4you">SUPP4YOU</string>
    <string name="forgot">Forgot?</string>
    <string name="log_in">Log in</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_account_create_now">Don\'t have account? Create now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="details">Details</string>
    <string name="gustavo_padilha">Gustavo Padilha</string>
    <string name="six_digit_code">Y3HZX9</string>
    <string name="enter_space">Enter Space</string>
    <string name="login_space">Login space</string>
    <string name="create_space">Create space</string>
    <string name="whats_your_name">Whats your name?</string>
    <string name="here_it_is_your_generate_code">Here it is your generate code</string>
    <string name="generate">Generate</string>
    <string name="share_with_others">Share in Whatsapp</string>
    <string name="put_the_generate_code_to_acces_your_groups">Put the generate code to acces your groups!</string>
    <string name="y46rgsf842">Y46RGSF842</string>
    <string name="what_will_be_your_group_name">What will be your group name?</string>
    <string name="chose_a_time_to_allow_other_participants_to_take_pictures">Chose the time to be able to take pictures</string>
    <string name="to_string">to</string>
    <string name="back">Back</string>
    <string name="participants">participants</string>


    <string name="join_event">Join an event to capture\nyour perspective.</string>
    <string name="downloading_toast_text">Downloading file</string>
    <string name="action_sheet_title1">Android makes it impossible to save photos to your camera roll directly from Instant Apps :/</string>
    <string name="action_sheet_title2">3 workarounds:\n1. Share photos with yourself (text or email)\n2. Take screenshots\n3. Download the full POV app</string>
    <string name="help_dialog_message">Event creation is not available for Android yet. We\'re working on it! In the meantime, you\'re able to participate in events created from iPhone.</string>
    <string name="confirm_exit_dialog_title">Are you sure?</string>
    <string name="confirm_exit_dialog_message">Do you want to close the app?</string>
    <string name="confirm_exit_dialog_positive_button">Yes</string>
    <string name="confirm_exit_dialog_negative_button">Cancel</string>
    <string name="rationale_camera_title">We need permission to access your camera</string>
    <string name="rationale_camera_message">This app relies on access to your camera to take photos.</string>
    <string name="rationale_positive_button">Permission settings</string>
    <string name="rationale_negative_button">Cancel</string>
    <string name="photo_disabled_toast_gallery_closed">Camera is locked</string>
    <string name="photo_disabled_toast_event_ended">Event has ended</string>
    <string name="no_photos_yet">No Photos Yet!</string>
    <string name="gallery_notification_title">The gallery is open</string>
    <string name="gallery_notification_message">Check out all the photos you and others took!</string>
    <string name="subscription_success_toast_message">We\'ll let you know when it\'s available!</string>
    <string name="camera_closes_in_label">Camera closes in</string>
    <string name="gallery_opens_in_label">Gallery opens in</string>
    <string name="continue_btn">Continue</string>
    <string name="study_group">Study Group</string>
    <string name="write_your_email">Write your email</string>
    <string name="write_your_name">Write your name!</string>
    <string name="write_your_group_name">Write your group name</string>
    <string name="write_the_code_here">Write the code here!</string>
    <string name="enter_access_code">Enter Access Code</string>
    <string name="ex_qkielnmzkct86">ex: 0409</string>

    //Days
    <string-array name="days">
        <item>1 Days</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>5 Days</item>
        <item>7 Days</item>
        <item>30 Days</item>
        <item>60 Days</item>
        <item>90 Days</item>
        <item>Unlimited</item>
    </string-array>

    <string-array name="times">
        <item>01:00 AM</item>
        <item>02:00 AM</item>
        <item>03:00 AM</item>
        <item>04:00 AM</item>
        <item>05:00 AM</item>
        <item>06:00 AM</item>
        <item>07:00 AM</item>
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>01:00 PM</item>
        <item>02:00 PM</item>
        <item>03:00 PM</item>
        <item>04:00 PM</item>
        <item>05:00 PM</item>
        <item>06:00 PM</item>
        <item>07:00 PM</item>
        <item>08:00 PM</item>
        <item>09:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
        <item>12:00 AM</item>
    </string-array>
</resources>